add a troubleshooting section for the java and python version gotchas